--- a/config/fpm-pool.conf
+++ b/config/fpm-pool.conf
@@ -14,6 +14,7 @@ error_log = /dev/stderr
 ;   '/path/to/unix/socket' - to listen on a unix socket.
 ; Note: This value is mandatory.
 listen = 127.0.0.1:9000
+listen = /run/php7-fpm.sock
 
 ; Enable status page
 pm.status_path = /fpm-status
