--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -37,7 +37,7 @@ http {
         sendfile off;
 
         root /var/www/html;
-        index index.php index.html;
+        index index.php index.html index.htm;
 
         location / {
             # First attempt to serve request as file, then
@@ -55,8 +55,8 @@ http {
         location ~ \.php$ {
             try_files $uri =404;
             fastcgi_split_path_info ^(.+\.php)(/.+)$;
-            #fastcgi_pass 127.0.0.1:9000;
-            fastcgi_pass /run/php7-fpm.sock;
+            fastcgi_pass 127.0.0.1:9000;
+            #fastcgi_pass /run/php-fpm7.sock;
             fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
             fastcgi_param SCRIPT_NAME $fastcgi_script_name;
             fastcgi_index index.php;
@@ -80,10 +80,35 @@ http {
             deny all;
             fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
             include fastcgi_params;
-            #fastcgi_pass 127.0.0.1:9000;
-            fastcgi_pass /run/php7-fpm.sock;
+            fastcgi_pass 127.0.0.1:9000;
+            #fastcgi_pass /run/php-fpm7.sock;
         }
     }
+    
+    # HTTPS server
+    #
+    #server {
+    #    listen       8443 ssl;
+    #    server_name  _;
+
+    #    ssl_certificate      cert.pem;
+    #    ssl_certificate_key  cert.key;
+
+    #    ssl_session_cache    shared:SSL:1m;
+    #    ssl_session_timeout  5m;
+
+    #    ssl_ciphers  HIGH:!aNULL:!MD5;
+    #    ssl_prefer_server_ciphers  on;
+         
+    #    root /var/www/html;
+    #    index index.php index.html index.htm;
+
+    #    location / {
+    #        # First attempt to serve request as file, then
+    #        # as directory, then fall back to index.php
+    #        try_files $uri $uri/ /index.php?q=$uri&$args;
+    #    }
+    #}
     
     gzip on;
     gzip_proxied any;
