--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -33,7 +33,11 @@ http {
         listen [::]:8080 default_server;
         listen 8080 default_server;
         server_name _;
-
+        
+        # Force HTTP to HTTPS
+        #rewrite ^(.*)$ https://$host$1 permanent;
+        #return 301 https://$server_name$request_uri;
+        
         sendfile off;
 
         root /var/www/html;
@@ -87,28 +91,69 @@ http {
     
     # HTTPS server
     #
-    #server {
-    #    listen       8443 ssl;
-    #    server_name  _;
+    server {
+        listen [::]:8443 ssl http2 default_server;
+        listen      8443 ssl http2 default_server;
+        server_name _;
 
-    #    ssl_certificate      cert.pem;
-    #    ssl_certificate_key  cert.key;
+        ssl_certificate      /certs/cert.pem;
+        ssl_certificate_key  /certs/cert.key;
 
-    #    ssl_session_cache    shared:SSL:1m;
-    #    ssl_session_timeout  5m;
+        ssl_session_cache    shared:SSL:1m;
+        ssl_session_timeout  5m;
 
-    #    ssl_ciphers  HIGH:!aNULL:!MD5;
-    #    ssl_prefer_server_ciphers  on;
+        ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+        ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:ECDHE:ECDH:AES:HIGH:!NULL:!aNULL:!MD5:!ADH:!RC4:!DH:!DHE;
+        ssl_prefer_server_ciphers  on;
          
-    #    root /var/www/html;
-    #    index index.php index.html index.htm;
+        root /var/www/html;
+        index index.php index.html index.htm;
 
-    #    location / {
-    #        # First attempt to serve request as file, then
-    #        # as directory, then fall back to index.php
-    #        try_files $uri $uri/ /index.php?q=$uri&$args;
-    #    }
-    #}
+        location / {
+            # First attempt to serve request as file, then
+            # as directory, then fall back to index.php
+            try_files $uri $uri/ /index.php?q=$uri&$args;
+        }
+        
+        # Redirect server error pages to the static page /50x.html
+        error_page 500 502 503 504 /50x.html;
+        location = /50x.html {
+            root /var/lib/nginx/html;
+        }
+
+        # Pass the PHP scripts to PHP-FPM listening on 127.0.0.1:9000
+        location ~ \.php$ {
+            try_files $uri =404;
+            fastcgi_split_path_info ^(.+\.php)(/.+)$;
+            fastcgi_pass 127.0.0.1:9000;
+            #fastcgi_pass /run/php-fpm7.sock;
+            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+            fastcgi_param SCRIPT_NAME $fastcgi_script_name;
+            fastcgi_index index.php;
+            include fastcgi_params;
+        }
+
+        location ~* \.(jpg|jpeg|gif|png|css|js|ico|xml)$ {
+            expires 5d;
+        }
+
+        # Deny access to . files, for security
+        location ~ /\. {
+            log_not_found off;
+            deny all;
+        }
+
+        # Allow fpm ping and status from localhost
+        location ~ ^/(fpm-status|fpm-ping)$ {
+            access_log off;
+            allow 127.0.0.1;
+            deny all;
+            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+            include fastcgi_params;
+            fastcgi_pass 127.0.0.1:9000;
+            #fastcgi_pass /run/php-fpm7.sock;
+        }
+    }
     
     gzip on;
     gzip_proxied any;
